# axum-sqlx-template

./: .env.sample  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml
src/: config.rs  lib.rs  main.rs  prelude.rs
src/features/routes/: mod.rs  status.rs
src/infra/: app.rs  cors.rs  database.rs  errors.rs  logging.rs  mod.rs
