[package]
name = "template_please_change"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
axum = "0.8.1"
clap = { version = "4.5.28", features = ["derive", "env"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
sqlx = { version = "0.8.3", features = ["postgres", "runtime-tokio", "tls-native-tls", "macros", "chrono", "json"] }
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["full", "tracing"] }
tower-http = { version = "0.6.2", features = ["trace", "cors", "sensitive-headers", "validate-request", "limit", "request-id"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
